@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Updated OSGi metadata
+* MockClassLoader.getResources no longer loads same file twice (thanks to Anderson Borba for the patch)
 
 Change log 1.5.4 (2014-01-29)
 -----------------------------
